# backend_rs

./: .env  .gitignore  Cargo.toml  README.md  database.sqlite  diesel.toml  package-lock.json  tailwind.config.js
assets/: main.css  style.css
migrations/2024-07-13-061617_users/: down.sql  up.sql
migrations/2024-07-14-090638_sessions/: up.sql
src/: database.rs  helpers.rs  lib.rs  main.rs  middlewares.rs  models.rs  routes.rs  schema.rs  templates.rs
src/auth/: cookies.rs  mod.rs  templates.rs
templates/: index.html  package.json
templates/pages/auth/: login.html  register.html
templates/parts/: sidebar.html
